[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Oscar Nylander <oscar@hedvig.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.4.2"
lazy_static = "1.4.0"
reduce = "0.1.3"
maplit = "1.0.2"
itertools = "0.9.0"
